tests/semantic/pass/ternary_void_void.c
void foo() {return;}

int main(void) {
   0 ? foo() : foo();
   return 0;
}
