tests/semantic/fail/prototype_no_args_definition_with_args_but_type_is_not_int.c
int foo();

int main(void) {
  return foo(0);
}

int foo(char a) {
  return a;
}

